--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
   </head>
   <body>
     <div class="container">
-      <form action="form" id="form">
-        <h2>REGISTER NOW</h2>
+      <form id="form" class="form">
+        <h2>Register With Us</h2>
         <div class="form-control">
-          <label for="username">User Name</label>
-          <input type="text" id="username" placeholder="Enter User Name" />
-          <small>ERROR MESSAGE</small>
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Enter Email" />
-          <small>ERROR MESSAGE</small>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="password">Password</label>
-          <input type="text" id="password" placeholder="Enter Password" />
-          <small>ERROR MESSAGE</small>
+          <input type="password" id="password" placeholder="Enter password" />
+          <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="password2">Confirm Password</label>
           <input
-            type="text"
+            type="password"
             id="password2"
-            placeholder="Enter Password Again"
+            placeholder="Enter password again"
           />
-          <small>ERROR MESSAGE</small>
+          <small>Error message</small>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
